
NULL =

noinst_LTLIBRARIES = libboxml.la

libboxml_la_CPPFLAGS = -DGMV_MathView_DLL
libboxml_la_SOURCES = \
  BoxML.hh \
  BoxMLActionElement.cc \
  BoxMLActionElement.hh \
  BoxMLAtElement.cc \
  BoxMLAtElement.hh \
  BoxMLAttributeParsers.hh \
  BoxMLAttributeSignatures.cc \
  BoxMLAttributeSignatures.hh \
  BoxMLBinContainerElement.cc \
  BoxMLBinContainerElement.hh \
  BoxMLDecorElement.cc \
  BoxMLDecorElement.hh \
  BoxMLElement.cc \
  BoxMLGroupElement.cc \
  BoxMLGroupElement.hh \
  BoxMLHElement.cc \
  BoxMLHElement.hh \
  BoxMLHOVElement.cc \
  BoxMLHOVElement.hh \
  BoxMLHVElement.cc \
  BoxMLHVElement.hh \
  BoxMLInkElement.cc \
  BoxMLInkElement.hh \
  BoxMLLayoutElement.cc \
  BoxMLLayoutElement.hh \
  BoxMLLinearContainerElement.cc \
  BoxMLLinearContainerElement.hh \
  BoxMLNamespaceContext.cc \
  BoxMLSpaceElement.cc \
  BoxMLSpaceElement.hh \
  BoxMLTextElement.cc \
  BoxMLTextElement.hh \
  BoxMLVElement.cc \
  BoxMLVElement.hh \
  BoxMLboxElement.cc \
  BoxMLboxElement.hh \
  $(NULL)

mathviewdir = $(pkgincludedir)/MathView
mathview_HEADERS = \
  BoxMLNamespaceContext.hh \
  BoxMLElement.hh \
  $(NULL)

INCLUDES = \
  -I$(top_builddir)/auto \
  -I$(top_srcdir)/auto \
  -I$(top_srcdir)/src/common \
  -I$(top_srcdir)/src/common/mathvariants \
  -I$(top_srcdir)/src/engine/common \
  -I$(top_srcdir)/src/backend/common \
  $(NULL)

