
noinst_LTLIBRARIES = libmathml.la

libmathml_la_SOURCES = \
  Configuration.cc \
  Globals.cc \
  traverseAux.cc \
  MathMLValueConversion.cc \
  mathVariantAux.cc \
  MathMLElementFactory.cc \
  MathMLNamespaceContext.cc \
  MathMLOperatorDictionary.cc \
  MathMLEntitiesTable.cc \
  MathMLActionElement.cc \
  MathMLAlignGroupElement.cc \
  MathMLAlignMarkElement.cc \
  MathMLAttributeSignatures.cc \
  MathMLBinContainerElement.cc \
  MathMLContainerElement.cc \
  MathMLDummyElement.cc \
  MathMLElement.cc \
  MathMLEmbellishment.cc \
  MathMLEncloseElement.cc \
  MathMLErrorElement.cc \
  MathMLFencedElement.cc \
  MathMLFractionElement.cc \
  MathMLGlyphNode.cc \
  MathMLIdentifierElement.cc \
  MathMLLabeledTableRowElement.cc \
  MathMLLinearContainerElement.cc \
  MathMLMarkNode.cc \
  MathMLMultiScriptsElement.cc \
  MathMLNode.cc \
  MathMLNormalizingContainerElement.cc \
  MathMLNumberElement.cc \
  MathMLOperatorElement.cc \
  MathMLPaddedElement.cc \
  MathMLParseFile.cc \
  MathMLPhantomElement.cc \
  MathMLRadicalElement.cc \
  MathMLRowElement.cc \
  MathMLScriptElement.cc \
  MathMLSemanticsElement.cc \
  MathMLSpaceElement.cc \
  MathMLSpaceNode.cc \
  MathMLStringLitElement.cc \
  MathMLStringNode.cc \
  MathMLStyleElement.cc \
  MathMLTableCellElement.cc \
  MathMLTableElement.cc \
  MathMLTableRowElement.cc \
  MathMLTextElement.cc \
  MathMLTextNode.cc \
  MathMLTokenElement.cc \
  MathMLUnderOverElement.cc \
  MathMLmathElement.cc \
  tableSetup.cc \
  tableLayout.cc

noinst_HEADERS = \
  Configuration.hh \
  Globals.hh \
  traverseAux.hh \
  MathML.hh \
  MathMLValueConversion.hh \
  mathVariantAux.hh \
  MathMLAdapters.hh \
  MathMLElementFactory.hh \
  MathMLNamespaceContext.hh \
  MathMLOperatorDictionary.hh \
  MathMLEntitiesTable.hh \
  MathMLAttributeParsers.hh \
  MathMLActionElement.hh \
  MathMLAlignGroupElement.hh \
  MathMLAlignMarkElement.hh \
  MathMLAttributeParsers.hh \
  MathMLAttributeSignatures.hh \
  MathMLBinContainerElement.hh \
  MathMLContainerElement.hh \
  MathMLDummyElement.hh \
  MathMLElement.hh \
  MathMLEmbellishment.hh \
  MathMLEncloseElement.hh \
  MathMLErrorElement.hh \
  MathMLFencedElement.hh \
  MathMLFractionElement.hh \
  MathMLGlyphNode.hh \
  MathMLIdentifierElement.hh \
  MathMLLabeledTableRowElement.hh \
  MathMLLinearContainerElement.hh \
  MathMLMarkNode.hh \
  MathMLMultiScriptsElement.hh \
  MathMLNode.hh \
  MathMLNormalizingContainerElement.hh \
  MathMLNumberElement.hh \
  MathMLOperatorElement.hh \
  MathMLPaddedElement.hh \
  MathMLParseFile.hh \
  MathMLPhantomElement.hh \
  MathMLRadicalElement.hh \
  MathMLRowElement.hh \
  MathMLScriptElement.hh \
  MathMLSemanticsElement.hh \
  MathMLSpaceElement.hh \
  MathMLSpaceNode.hh \
  MathMLStringLitElement.hh \
  MathMLStringNode.hh \
  MathMLStyleElement.hh \
  MathMLTableCellElement.hh \
  MathMLTableElement.hh \
  MathMLTableRowElement.hh \
  MathMLTextElement.hh \
  MathMLTextNode.hh \
  MathMLTokenElement.hh \
  MathMLUnderOverElement.hh \
  MathMLmathElement.hh

INCLUDES = \
  $(DOM_CFLAGS) \
  -I$(top_srcdir)/auto \
  -I$(top_srcdir)/src/common \
  -I$(top_srcdir)/src/engine/common \
  -I$(top_srcdir)/src/engine/boxml \
  -I$(top_srcdir)/src/formatter/common \
  -I$(top_srcdir)/src/formatter/basictypes/mathvariants/ \
  -I$(top_srcdir)/src/formatter/areamodel \
  -I$(top_srcdir)/src/formatter/gtk_areamodel \
  -I$(top_srcdir)/src/formatter/mathml_graphic_device \
  -I$(top_srcdir)/src/formatter/gtk_mathml_graphic_device

