
NULL =

noinst_LTLIBRARIES = libmathml.la

libmathml_la_SOURCES = \
  traverseAux.cc \
  MathMLValueConversion.cc \
  mathVariantAux.cc \
  MathMLNamespaceContext.cc \
  MathMLOperatorDictionary.cc \
  MathMLActionElement.cc \
  MathMLAlignGroupElement.cc \
  MathMLAlignMarkElement.cc \
  MathMLAttributeSignatures.cc \
  MathMLBinContainerElement.cc \
  MathMLContainerElement.cc \
  MathMLDummyElement.cc \
  MathMLElement.cc \
  MathMLEmbellishment.cc \
  MathMLEncloseElement.cc \
  MathMLErrorElement.cc \
  MathMLFractionElement.cc \
  MathMLGlyphNode.cc \
  MathMLIdentifierElement.cc \
  MathMLLinearContainerElement.cc \
  MathMLMarkNode.cc \
  MathMLMultiScriptsElement.cc \
  MathMLNode.cc \
  MathMLNormalizingContainerElement.cc \
  MathMLNumberElement.cc \
  MathMLOperatorElement.cc \
  MathMLPaddedElement.cc \
  MathMLPhantomElement.cc \
  MathMLRadicalElement.cc \
  MathMLRowElement.cc \
  MathMLInferredRowElement.cc \
  MathMLScriptElement.cc \
  MathMLSpaceElement.cc \
  MathMLSpaceNode.cc \
  MathMLStringLitElement.cc \
  MathMLStringNode.cc \
  MathMLStyleElement.cc \
  MathMLTableCellElement.cc \
  MathMLTableElement.cc \
  MathMLTextElement.cc \
  MathMLTextNode.cc \
  MathMLTokenElement.cc \
  MathMLUnderOverElement.cc \
  MathMLmathElement.cc

mathviewdir = $(pkgincludedir)/MathView
mathview_HEADERS = \
  MathMLNamespaceContext.hh \
  MathMLOperatorDictionary.hh \
  MathMLElement.hh \
  $(NULL)

noinst_HEADERS = \
  traverseAux.hh \
  MathML.hh \
  MathMLValueConversion.hh \
  mathVariantAux.hh \
  MathMLAdapters.hh \
  MathMLAttributeParsers.hh \
  MathMLActionElement.hh \
  MathMLAlignGroupElement.hh \
  MathMLAlignMarkElement.hh \
  MathMLAttributeParsers.hh \
  MathMLAttributeSignatures.hh \
  MathMLBinContainerElement.hh \
  MathMLContainerElement.hh \
  MathMLDummyElement.hh \
  MathMLEmbellishment.hh \
  MathMLEncloseElement.hh \
  MathMLErrorElement.hh \
  MathMLFractionElement.hh \
  MathMLGlyphNode.hh \
  MathMLIdentifierElement.hh \
  MathMLLinearContainerElement.hh \
  MathMLMarkNode.hh \
  MathMLMultiScriptsElement.hh \
  MathMLNode.hh \
  MathMLNormalizingContainerElement.hh \
  MathMLNumberElement.hh \
  MathMLOperatorElement.hh \
  MathMLPaddedElement.hh \
  MathMLPhantomElement.hh \
  MathMLRadicalElement.hh \
  MathMLRowElement.hh \
  MathMLInferredRowElement.hh \
  MathMLScriptElement.hh \
  MathMLSpaceElement.hh \
  MathMLSpaceNode.hh \
  MathMLStringLitElement.hh \
  MathMLStringNode.hh \
  MathMLStyleElement.hh \
  MathMLTableCellElement.hh \
  MathMLTableElement.hh \
  MathMLTextElement.hh \
  MathMLTextNode.hh \
  MathMLTokenElement.hh \
  MathMLUnderOverElement.hh \
  MathMLmathElement.hh

INCLUDES = \
  -I$(top_srcdir)/auto \
  -I$(top_builddir)/auto \
  -I$(top_srcdir)/src/common \
  -I$(top_srcdir)/src/common/mathvariants/ \
  -I$(top_srcdir)/src/engine/common \
  -I$(top_srcdir)/src/frontend/common \
  -I$(top_srcdir)/src/formatter/common \
  -I$(top_srcdir)/src/formatter/areamodel \
  -I$(top_srcdir)/src/formatter/mathml_graphic_device

