
NULL =

noinst_LTLIBRARIES = libmathml.la

libmathml_la_CPPFLAGS = -DGMV_MathView_DLL
libmathml_la_SOURCES = \
  MathMLActionElement.cc \
  MathMLAlignGroupElement.cc \
  MathMLAlignMarkElement.cc \
  MathMLAttributeSignatures.cc \
  MathMLBinContainerElement.cc \
  MathMLContainerElement.cc \
  MathMLDummyElement.cc \
  MathMLElement.cc \
  MathMLEmbellishment.cc \
  MathMLEncloseElement.cc \
  MathMLErrorElement.cc \
  MathMLFractionElement.cc \
  MathMLFunctionApplicationNode.cc \
  MathMLGlyphNode.cc \
  MathMLIdentifierElement.cc \
  MathMLInferredRowElement.cc \
  MathMLInvisibleTimesNode.cc \
  MathMLLinearContainerElement.cc \
  MathMLMarkNode.cc \
  MathMLMultiScriptsElement.cc \
  MathMLNamespaceContext.cc \
  MathMLNode.cc \
  MathMLNormalizingContainerElement.cc \
  MathMLNumberElement.cc \
  MathMLOperatorDictionary.cc \
  MathMLOperatorElement.cc \
  MathMLPaddedElement.cc \
  MathMLPhantomElement.cc \
  MathMLRadicalElement.cc \
  MathMLRowElement.cc \
  MathMLScriptElement.cc \
  MathMLSpaceElement.cc \
  MathMLStringLitElement.cc \
  MathMLStringNode.cc \
  MathMLStyleElement.cc \
  MathMLTableCellElement.cc \
  MathMLTableContentFactory.cc \
  MathMLTableElement.cc \
  MathMLTableFormatter.cc \
  MathMLTextElement.cc \
  MathMLTextNode.cc \
  MathMLTokenElement.cc \
  MathMLUnderOverElement.cc \
  MathMLValueConversion.cc \
  MathMLmathElement.cc \
  mathVariantAux.cc \
  traverseAux.cc \
  $(NULL)

mathviewdir = $(pkgincludedir)/MathView
mathview_HEADERS = \
  MathMLNamespaceContext.hh \
  MathMLOperatorDictionary.hh \
  MathMLElement.hh \
  $(NULL)

noinst_HEADERS = \
  MathML.hh \
  MathMLActionElement.hh \
  MathMLAdapters.hh \
  MathMLAlignGroupElement.hh \
  MathMLAlignMarkElement.hh \
  MathMLAttributeParsers.hh \
  MathMLAttributeParsers.hh \
  MathMLAttributeSignatures.hh \
  MathMLBinContainerElement.hh \
  MathMLContainerElement.hh \
  MathMLDummyElement.hh \
  MathMLEmbellishment.hh \
  MathMLEncloseElement.hh \
  MathMLErrorElement.hh \
  MathMLFractionElement.hh \
  MathMLFunctionApplicationNode.hh \
  MathMLGlyphNode.hh \
  MathMLIdentifierElement.hh \
  MathMLInferredRowElement.hh \
  MathMLInvisibleTimesNode.hh \
  MathMLLinearContainerElement.hh \
  MathMLMarkNode.hh \
  MathMLMultiScriptsElement.hh \
  MathMLNode.hh \
  MathMLNormalizingContainerElement.hh \
  MathMLNumberElement.hh \
  MathMLOperatorElement.hh \
  MathMLPaddedElement.hh \
  MathMLPhantomElement.hh \
  MathMLRadicalElement.hh \
  MathMLRowElement.hh \
  MathMLScriptElement.hh \
  MathMLSpaceElement.hh \
  MathMLStringLitElement.hh \
  MathMLStringNode.hh \
  MathMLStyleElement.hh \
  MathMLTableCellElement.hh \
  MathMLTableContentFactory.hh \
  MathMLTableElement.hh \
  MathMLTableFormatter.hh \
  MathMLTextElement.hh \
  MathMLTextNode.hh \
  MathMLTokenElement.hh \
  MathMLUnderOverElement.hh \
  MathMLValueConversion.hh \
  MathMLmathElement.hh \
  mathVariantAux.hh \
  traverseAux.hh \
  $(NULL)

INCLUDES = \
  -I$(top_srcdir)/auto \
  -I$(top_builddir)/auto \
  -I$(top_srcdir)/src/common \
  -I$(top_srcdir)/src/common/mathvariants/ \
  -I$(top_srcdir)/src/engine/common \
  -I$(top_srcdir)/src/frontend/common \
  -I$(top_srcdir)/src/backend/common \
  $(NULL)

