
noinst_LTLIBRARIES = libareamodel.la

#libareamodel_la_LIBADD = -lstdc++

libareamodel_la_LDFLAGS = -version-info @AREAMODEL_VERSION_INFO@

libareamodel_la_SOURCES = \
  Area.cc \
  AreaFactory.cc \
  BoxArea.cc \
  BoxedLayoutArea.cc \
  ColorArea.cc \
  HorizontalFillerArea.cc \
  IdArea.cc \
  InkArea.cc \
  OverlapArrayArea.cc \
  VerticalArrayArea.cc \
  AreaId.cc \
  AreaIdAux.cc \
  HorizontalSpaceArea.cc \
  VerticalFillerArea.cc \
  HideArea.cc \
  IgnoreArea.cc	\
  ShiftArea.cc \
  VerticalSpaceArea.cc \
  BinContainerArea.cc \
  HorizontalArrayArea.cc \
  LinearContainerArea.cc \
  WrapperArea.cc \
  SimpleArea.cc

noinst_HEADERS = \
  Area.hh \
  AreaFactory.hh \
  BoxedLayoutArea.hh \
  ColorArea.hh	\
  HorizontalFillerArea.hh \
  ShiftArea.hh \
  VerticalSpaceArea.hh \
  AreaId.hh \
  AreaIdAux.hh \
  ContainerArea.hh \
  HorizontalSpaceArea.hh \
  OverlapArrayArea.hh \
  WrapperArea.hh \
  SimpleArea.hh \
  FillerArea.hh \
  IdArea.hh \
  InkArea.hh \
  BinContainerArea.hh \
  IgnoreArea.hh	\
  RenderingContext.hh \
  SearchingContext.hh \
  HideArea.hh \
  LinearContainerArea.hh \
  VerticalArrayArea.hh \
  BoxArea.hh \
  HorizontalArrayArea.hh \
  VerticalFillerArea.hh

INCLUDES = \
  -I$(top_srcdir)/src/common \
  -I$(top_srcdir)/src/engine/common

