
noinst_LTLIBRARIES = libboxml_graphic_device.la

#libboxml_graphic_device_la_LIBADD =

libboxml_graphic_device_la_SOURCES = \
  BoxFormattingContext.cc \
  BoxGraphicDevice.cc

noinst_HEADERS = \
  BoxFormattingContext.hh \
  BoxGraphicDevice.hh

INCLUDES = \
  -I$(top_srcdir)/auto \
  -I$(top_srcdir)/src/common \
  -I$(top_srcdir)/src/engine/common \
  -I$(top_srcdir)/src/engine/boxml \
  -I$(top_srcdir)/src/formatter/common \
  -I$(top_srcdir)/src/formatter/areamodel

