
NULL =

noinst_LTLIBRARIES = libboxml_graphic_device.la

#libboxml_graphic_device_la_LIBADD =

libboxml_graphic_device_la_SOURCES = \
  BoxGraphicDevice.cc \
  $(NULL)

noinst_HEADERS = \
  BoxGraphicDevice.hh \
  $(NULL)

INCLUDES = \
  -I$(top_builddir)/auto \
  -I$(top_srcdir)/src/common \
  -I$(top_srcdir)/src/common/mathvariants \
  -I$(top_srcdir)/src/engine/common \
  -I$(top_srcdir)/src/engine/boxml \
  -I$(top_srcdir)/src/formatter/common \
  -I$(top_srcdir)/src/formatter/areamodel \
  $(NULL)

